# simplex-method

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  run.sh
.github/workflows/: cmake-single-platform.yml
include/: SOPMatrix.hpp  SOPModel.hpp  SOPlpsolver.hpp
